# Avature-ATS-Scraper

./: .gitignore  README.md  pyproject.toml
input/: sites.txt
scripts/: split_output.py
src/avature_scraper/: __init__.py  discovery.py  http.py  job_parser.py  main.py  models.py  scraper.py  sitemap_parser.py
src/avature_scraper/parsers/: __init__.py  base.py  baufest.py  gps.py  nva.py  registry.py  standard.py
